# AVS

./: .gitignore  README.md
STM32VLDISCOVERY/: README.md  platformio.ini
STM32VLDISCOVERY/.reference/: stm32vl_discovery.c
STM32VLDISCOVERY/include/: internal.h  periphery.h
STM32VLDISCOVERY/src/: main.c
STM32VLDISCOVERY/src/internal.c/: clock.c  error.c
STM32VLDISCOVERY/src/periphery/: led.c
code/: Dockerfile  Makefile
code/f100/: CMakeLists.txt  Makefile  const.cmake  platformio.ini  toolchain.cmake
code/f100/demo/7-seg/: CMakeLists.txt
code/f100/demo/7-seg/include/: main.h
code/f100/demo/7-seg/src/: main.c
code/f100/demo/bsp_led/: CMakeLists.txt
code/f100/demo/bsp_led/src/: main.c
code/f100/demo/can/: CMakeLists.txt
code/f100/demo/can/src/: main.c
code/f100/demo/lcd/: CMakeLists.txt
code/f100/demo/lcd/include/: main.h
code/f100/demo/lcd/src/: main.c
code/f100/demo/usart/: CMakeLists.txt
code/f100/demo/usart/include/: main.h
code/f100/demo/usart/src/: main.c  stm32f1xx_hal_msp.c
code/f100/lib/: CMakeLists.txt  STM32F100RBTX_FLASH.ld
code/f100/lib/7-seg/: 7-seg.c  7-seg.h  CMakeLists.txt
code/f100/lib/bsp/: CMakeLists.txt
code/f100/lib/hal/: CMakeLists.txt  stm32f1xx_hal_conf.h
code/f100/lib/lcd/: CMakeLists.txt  lcd.c  lcd.h
code/f100/lib/startup/: CMakeLists.txt  startup_stm32f100rbtx.s  sysmem.c
code/h747/: Makefile  README.md  platformio.ini
code/h747-cmake/: CMakeLists.txt  Makefile  const.cmake  gdbinit  openocd.cfg
code/h747-cmake/Include/: stm32h747i_discovery_conf.h
code/h747-cmake/Sources/: main.c  stm32h7xx_it.c  system_stm32h7xx.c
code/h747-cmake/Startup/: startup_stm32h747xihx.s
code/h747/lib/h747-button/include/: h747-button.h
code/h747/lib/h747-button/src/: h747-button.c
code/h747/lib/h747-clock/include/: h747-clock.h
code/h747/lib/h747-clock/src/: h747-clock.c
code/h747/lib/h747-joy/include/: h747-joy.h
code/h747/lib/h747-joy/src/: h747-joy.c
code/h747/lib/h747-led/include/: h747-led.h
code/h747/lib/h747-led/src/: h747-led.c
code/h747/lib/h747-timer/include/: h747-timer.h
code/h747/lib/h747-timer/src/: h747-timer.c
code/h747/lib/h747-uart/include/: h747-usart.h
code/h747/lib/h747-uart/src/: h747-usart.c
code/h747/lib/nt35510/include/: nt35510.h  nt35510_reg.h
code/h747/lib/nt35510/src/: nt35510.c  nt35510_reg.c
code/h747/src/h747-lcd-demo/include/: h747-lcd-demo.h
code/h747/src/h747-lcd-demo/src/: main.c
code/h747/src/h747-led-demo/include/: h747-led-demo.h
code/h747/src/h747-led-demo/src/: main.c
code/h747/src/h747-usart-demo/include/: h747-usart-demo.h
code/h747/src/h747-usart-demo/src/: main.c
code/rp2040/: CMakeLists.txt  Makefile  pico_sdk.cmake
code/rp2040/lib/: CMakeLists.txt
code/rp2040/lib/rp2040-bmp3/: CMakeLists.txt
code/rp2040/lib/rp2040-bmp3/include/: bmp3_common.h  bmp3_config.h
code/rp2040/lib/rp2040-bmp3/src/: bmp3_common.c
code/rp2040/lib/rp2040-bno055/: CMakeLists.txt
code/rp2040/lib/rp2040-bno055/include/: bno055_common.h  bno055_config.h
code/rp2040/lib/rp2040-bno055/src/: bno055_common.c
code/rp2040/lib/rp2040-time/: CMakeLists.txt
code/rp2040/lib/rp2040-time/include/: rp2040_time.h
code/rp2040/lib/rp2040-time/src/: rp2040_time.c
code/rp2040/src/: CMakeLists.txt
code/rp2040/src/rp2040-bmp-demo/: CMakeLists.txt
code/rp2040/src/rp2040-bmp-demo/include/: rp2040-bmp-demo.h
code/rp2040/src/rp2040-bmp-demo/src/: main.c
code/rp2040/src/rp2040-bno-demo/: CMakeLists.txt
code/rp2040/src/rp2040-bno-demo/include/: rp2040-bno-demo.h
code/rp2040/src/rp2040-bno-demo/src/: main.c
code/rp2040/tool/: bash.sh  rp2040load
code/test/usart/: CMakeLists.txt  stm32f1xx_hal_uart_msp.c  usart.c  usart.h
hw1-LED/: platformio.ini
hw1-LED/include/: main.h
hw1-LED/src/: main.c
hw1-stm32h747i-disco-LED/: README.md  platformio.ini
hw1-stm32h747i-disco-LED/.reference/: stm32h747i_discovery.c  stm32h747i_discovery.h  stm32h747i_discovery_conf.h
hw1-stm32h747i-disco-LED/include/: internal.h  periphery.h
hw1-stm32h747i-disco-LED/src/: main.c
hw1-stm32h747i-disco-LED/src/internal.c/: clock.c  timer.c
hw1-stm32h747i-disco-LED/src/periphery/: button.c  joystick.c  led.c
hw2-stm32h747i-disco-USART/: platformio.ini
resources/: README.md
resources/stm32vldiscovery/: README.md
script/: bin_hook.py
semestral/proposal/: .gitignore  01-motivation.tex  02-implementation.tex  03-summary.tex  Makefile  main.tex
semestral/proposal/images/: implementation.drawio
stm32-kit/stm32-kit/: platformio.ini
